Fix operators spacing

--- a/src/worksheets/operations-with-boxes/worksheet.css
+++ b/src/worksheets/operations-with-boxes/worksheet.css
@@ -34,7 +34,8 @@
 .problem .symbol {
     font-size: 1.8rem;
     font-weight: 700;
-    padding: 0 10px;
+    width: 50px;
+    text-align: center;
 }
 
 .answer-box {
